syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "./;subscription";



service SubscriptionService {
  rpc Subscribe(SubscribeRequest) returns (google.protobuf.Empty);
  
  rpc Confirm(ConfirmRequest) returns (google.protobuf.Empty);
  
  rpc Unsubscribe(UnsubscribeRequest) returns (google.protobuf.Empty);
  
  rpc GetSubscriptionsByFrequency(GetSubscriptionsByFrequencyRequest) returns (GetSubscriptionsByFrequencyResponse);
}


enum Frequency {
    DAILY = 0;
    HOURLY = 1;
} 

message SubscribeRequest {
    string email = 1;
    string city = 2;
    Frequency frequency = 3;
}

message GetSubscriptionsByFrequencyRequest {
  Frequency frequency = 1;  
  int32 page_size = 2;
  int32 page_token = 3;
}


message ConfirmRequest {
  string token = 1;
}

message UnsubscribeRequest {
  string token = 1;
}


message Subscription {
  string email = 2;
  string city = 3;
}

message GetSubscriptionsByFrequencyResponse {
  repeated Subscription subscriptions = 1;
  int32 next_page_index = 2;
}